Fix clipped topology tooltip
https://bugzilla.redhat.com/show_bug.cgi?id=1400831

--- a/app/assets/stylesheets/container_topology.css
+++ b/app/assets/stylesheets/container_topology.css
@@ -5,7 +5,7 @@
 }
 
 .container_topology .legend { /* prevents tooltip from conflicting with the nav bar*/
-  margin-left: 40px;
+  margin-left: 55px;
 }
 
 .container_topology g.EntityLegend {
